# portfolio

./: .gitignore  app_beam_forces.py  estructura_y_contenido.txt  install_private_packages.py  lcr_code_loader.py  main.py  operaciones.py  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: keepstreamlitalive.yml
pages/: app_beam.py  app_beam_forces.py  app_multiply.py  app_pile.py  app_steel_section.py  app_unit_converter.py
portfolio/pages/: app_multiply.py
streamlit/: config.toml  package.json
