[project]
name = "portfolio"
version = "0.1.0"
description = "Portfolio of tools developed by Luis Caballero Ramos"    
authors = [{ name = "Luis Caballero Ramos", email = "luiscaballeroramos@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7"

dependencies = [
    "streamlit==1.45.1",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "lcr_code @ git+https://github.com/luiscaballeroramos/lcr_code.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["portfolio"]
